# backboard_browser

./: .gitignore  README.md  pyproject.toml  run.py  start.sh
app/: __init__.py  config.py
app/api/: assistants.py  cache.py  chat.py  documents.py  memory.py  models.py  routes.py  threads.py
app/models/: assistant.py  document.py  memory.py  model.py  thread.py
app/services/: backboard.py  cache.py
app/templates/: assistants.html  base.html  documents.html  index.html  memory.html  models.html  threads.html
scripts/: setup_browser_assistant.py  smoke_documents.sh
static/css/: main.css
